examples/errors/esin4.c
int main ()
{
	int array [1][1.5];
	
	array [0][0] = 5;
}

